--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ author_email = kenichdietrich@protonmail.com
 description = Utils for segmentation tasks in pyTorch
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/
+url = https://github.com/kenichdietrich/seg-torchutils/
 license = file LICENSE
 
 [options]
